--- a/_layouts/career.html
+++ b/_layouts/career.html
@@ -56,9 +56,15 @@ layout: career
 
 										{% assign index = index | plus: 1 %}
 
+										{% if section.is_youtube_active %}
+											{% assign video_type = 'jsPopup--YT' %}
+										{% else %}
+											{% assign video_type = 'jsPopup--HTML' %}
+										{% endif %}
+
 										<div class="careerContent__videoBox">
 											<div class="careerContent__photo" style="background-image: url({{ item.video_image | imgix_url: auto: format, q: 50, w: 600, h: 350 }});"></div>
-											<a href="#" class="careerContent__play jsPopup" data-popup="videoPopup-{{ index }}"></a>
+											<a href="#" class="careerContent__play jsPopup {{ video_type }}" data-popup="videoPopup-{{ index }}"></a>
 										</div>
 
 										<div class="popup" data-popup="videoPopup-{{ index }}">
@@ -70,9 +76,17 @@ layout: career
 															<div class="popup__inner">
 																<div class="videoBanner__popup">
 																	<div class="videoBanner__videoBox">
-																		<video class="videoBanner__video" preload="none">
-																			<source src="{% value item.video_asset %}" type="video/mp4">
-																		</video>
+																		{% if section.is_youtube_active %}
+
+																			<div class="videoBanner__video" data-src="{% value item.yt_video_id %}"></div>
+
+																		{% else %}
+
+																			<video class="videoBanner__video" preload="none">
+																				<source src="{% value item.video_asset %}" type="video/mp4">
+																			</video>
+
+																		{% endif %}
 																	</div>
 																</div>
 															</div>
