--- a/_includes/sections/video-banner.html
+++ b/_includes/sections/video-banner.html
@@ -32,10 +32,16 @@
 						{% capture background %}background-image: url({{ background | imgix_url: auto: format, q: 50, w: 1200, h: 800 }});{% endcapture %}
 					{% endif %}
 
+					{% if section.is_youtube_active %}
+						{% assign video_type = 'jsPopup--YT' %}
+					{% else %}
+						{% assign video_type = 'jsPopup--HTML' %}
+					{% endif %}
+
 					<div class="stdCols__col stdCols__col--mid stdCols__col--videoBanner stdCols__col--z0">
 						<div class="videoBanner__videoBox">
 							<div class="videoBanner__videoImg videoBanner__videoImg--bg" style="{{ background }}"></div>
-							<a href="#" class="videoBanner__videoFrame jsMultiHover jsPopup" data-popup="videoPopup">
+							<a href="#" class="videoBanner__videoFrame jsMultiHover jsPopup {{ video_type }}" data-popup="videoPopup">
 								<div class="videoBanner__videoImg" style="background-image: url({{ section.video_image | imgix_url: auto: format, q: 50, w: 1200, h: 800 }});">
 									<span class="videoBanner__play"></span>
 								</div>
