--- a/_layouts/events-single.html
+++ b/_layouts/events-single.html
@@ -32,7 +32,7 @@ layout: events-single
 				</div>
 				<div class="stdCols__col">
 					<div class="contentPage__eventBox">
-						<div class="contentPage__map" data-marker="/img/marker.png" data-lat="{{ page.location[0].lat }}" data-lng="{{ page.location[0].lng }}"></div>
+						<div class="contentPage__map" data-marker="/img/marker.png" data-lat="{{ page.location.lat }}" data-lng="{{ page.location.lng }}"></div>
 						<div class="contentPage__data">
 							<ul>
 								<li class="date">
