--- a/_includes/fonts/ltr.html
+++ b/_includes/fonts/ltr.html
@@ -1,7 +1,9 @@
 <style type="text/css">
 	@font-face {
 		font-family: 'DINNextLTPro';
-		src: url('/font/DINNextLTPro/DINNextLTPro-Light.eot?#iefix') format('embedded-opentype'),
+		src:
+			url('/font/DINNextLTPro/DINNextLTPro-Light.eot?#iefix') format('embedded-opentype'),
+			url('/font/DINNextLTPro/DINNextLTPro-Light.woff2') format('woff2'),
 			url('/font/DINNextLTPro/DINNextLTPro-Light.woff') format('woff'),
 			url('/font/DINNextLTPro/DINNextLTPro-Light.ttf') format('truetype'),
 			url('/font/DINNextLTPro/DINNextLTPro-Light.svg#DINNextLTPro-Light') format('svg');
@@ -11,7 +13,9 @@
 
 	@font-face {
 		font-family: 'DINNextLTPro';
-		src: url('/font/DINNextLTPro/DINNextLTPro-Regular.eot?#iefix') format('embedded-opentype'),
+		src:
+			url('/font/DINNextLTPro/DINNextLTPro-Regular.eot?#iefix') format('embedded-opentype'),
+			url('/font/DINNextLTPro/DINNextLTPro-Regular.woff2') format('woff2'),
 			url('/font/DINNextLTPro/DINNextLTPro-Regular.woff') format('woff'),
 			url('/font/DINNextLTPro/DINNextLTPro-Regular.ttf') format('truetype'),
 			url('/font/DINNextLTPro/DINNextLTPro-Regular.svg#DINNextLTPro-Regular') format('svg');
@@ -21,7 +25,9 @@
 
 	@font-face {
 		font-family: 'DINNextLTPro';
-		src: url('/font/DINNextLTPro/DINNextLTPro-Medium.eot?#iefix') format('embedded-opentype'),
+		src:
+			url('/font/DINNextLTPro/DINNextLTPro-Medium.eot?#iefix') format('embedded-opentype'),
+			url('/font/DINNextLTPro/DINNextLTPro-Medium.woff2') format('woff2'),
 			url('/font/DINNextLTPro/DINNextLTPro-Medium.woff') format('woff'),
 			url('/font/DINNextLTPro/DINNextLTPro-Medium.ttf') format('truetype'),
 			url('/font/DINNextLTPro/DINNextLTPro-Medium.svg#DINNextLTPro-Medium') format('svg');
@@ -31,7 +37,9 @@
 
 	@font-face {
 		font-family: 'DINNextLTPro';
-		src: url('/font/DINNextLTPro/DINNextLTPro-Bold.eot?#iefix') format('embedded-opentype'),
+		src:
+			url('/font/DINNextLTPro/DINNextLTPro-Bold.eot?#iefix') format('embedded-opentype'),
+			url('/font/DINNextLTPro/DINNextLTPro-Bold.woff2') format('woff2'),
 			url('/font/DINNextLTPro/DINNextLTPro-Bold.woff') format('woff'),
 			url('/font/DINNextLTPro/DINNextLTPro-Bold.ttf') format('truetype'),
 			url('/font/DINNextLTPro/DINNextLTPro-Bold.svg#DINNextLTPro-Light') format('svg');
@@ -41,7 +49,9 @@
 
 	@font-face {
 		font-family: 'DINNextLTArabic';
-		src: url('/font/DINNextLTArabic/DINNextLTArabic-Regular.eot?#iefix') format('embedded-opentype'),
+		src:
+			url('/font/DINNextLTArabic/DINNextLTArabic-Regular.eot?#iefix') format('embedded-opentype'),
+			url('/font/DINNextLTArabic/DINNextLTArabic-Regular.woff2') format('woff2'),
 			url('/font/DINNextLTArabic/DINNextLTArabic-Regular.woff') format('woff'),
 			url('/font/DINNextLTArabic/DINNextLTArabic-Regular.ttf') format('truetype'),
 			url('/font/DINNextLTArabic/DINNextLTArabic-Regular.svg#DINNextLTArabic-Regular') format('svg');
