--- a/scss/components/_homeBanner.scss
+++ b/scss/components/_homeBanner.scss
@@ -101,8 +101,10 @@
 	}
 
 	&__content{
-		z-index: 2;
-		position: relative;
+		position: fixed;
+		top: 0;
+		left: 0;
+		width: 100%;
 		height: 100%;
 		box-sizing: border-box;
 		padding: 9rem 0;
