--- a/_includes/sections/video-banner.html
+++ b/_includes/sections/video-banner.html
@@ -1,78 +1,79 @@
 {% for section in site.video-banner %}
 	{% if section.title contains page.04_video_banner %}
 
-	<section class="videoBanner stdBg">
-		<div class="wrapper wrapper--inside">
-			<div class="stdCols">
-				<div class="stdCols__cols">
+		{% if section.is_youtube_active %}
+			{% assign video_type = 'jsPopup--YT' %}
+		{% else %}
+			{% assign video_type = 'jsPopup--HTML' %}
+		{% endif %}
 
-					<div class="stdCols__col stdCols__col--mid stdCols__col--videoBanner stdCols__col--z1">
-						<div class="videoBanner__textBox">
-							<div class="textBox jsShowDelayed">
-								<span class="textBox__preTitle textBox__preTitle--large">{% value section.header %}</span>
+		{% assign background = section.background_asset | strip %}
+		{% if background != empty %}
+			{% capture background %}background-image: url({{ background | imgix_url: auto: format, q: 50, w: 1200, h: 800 }});{% endcapture %}
+		{% endif %}
 
-								{% capture title %}{% value section.text %}{% endcapture %}
-								<h3 class="textBox__title textBox__title--large">
-									{{ title | markdownify | remove: '<p>' | remove: '</p>' }}
-								</h3>
+		<section class="videoBanner stdBg">
+			<div class="wrapper wrapper--inside">
+				<div class="stdCols">
+					<div class="stdCols__cols">
 
-								{% capture description %}{% value section.description %}{% endcapture %}
-								<div class="textBox__text">{{ description | markdownify }}</div>
-								<div class="textBox__button">
-									<a href="#" class="button button--lightest jsMultiHover jsPopup" data-popup="videoPopup">
-										<span class="button__text">{% t watch %}</span>
-									</a>
+						<div class="stdCols__col stdCols__col--mid stdCols__col--videoBanner stdCols__col--z1">
+							<div class="videoBanner__textBox">
+								<div class="textBox jsShowDelayed">
+									<span class="textBox__preTitle textBox__preTitle--large">{% value section.header %}</span>
+
+									{% capture title %}{% value section.text %}{% endcapture %}
+									<h3 class="textBox__title textBox__title--large">
+										{{ title | markdownify | remove: '<p>' | remove: '</p>' }}
+									</h3>
+
+									{% capture description %}{% value section.description %}{% endcapture %}
+									<div class="textBox__text">{{ description | markdownify }}</div>
+									<div class="textBox__button">
+										<a href="#" class="button button--lightest jsMultiHover jsPopup {{ video_type }}" data-popup="videoPopup">
+											<span class="button__text">{% t watch %}</span>
+										</a>
+									</div>
 								</div>
 							</div>
 						</div>
-					</div>
 
-					{% assign background = section.background_asset | strip %}
-					{% if background != empty %}
-						{% capture background %}background-image: url({{ background | imgix_url: auto: format, q: 50, w: 1200, h: 800 }});{% endcapture %}
-					{% endif %}
-
-					{% if section.is_youtube_active %}
-						{% assign video_type = 'jsPopup--YT' %}
-					{% else %}
-						{% assign video_type = 'jsPopup--HTML' %}
-					{% endif %}
-
-					<div class="stdCols__col stdCols__col--mid stdCols__col--videoBanner stdCols__col--z0">
-						<div class="videoBanner__videoBox">
-							<div class="videoBanner__videoImg videoBanner__videoImg--bg" style="{{ background }}"></div>
-							<a href="#" class="videoBanner__videoFrame jsMultiHover jsPopup {{ video_type }}" data-popup="videoPopup">
-								<div class="videoBanner__videoImg" style="background-image: url({{ section.video_image | imgix_url: auto: format, q: 50, w: 1200, h: 800 }});">
-									<span class="videoBanner__play"></span>
-								</div>
-							</a>
+						<div class="stdCols__col stdCols__col--mid stdCols__col--videoBanner stdCols__col--z0">
+							<div class="videoBanner__videoBox">
+								<div class="videoBanner__videoImg videoBanner__videoImg--bg" style="{{ background }}"></div>
+								<a href="#" class="videoBanner__videoFrame jsMultiHover jsPopup {{ video_type }}" data-popup="videoPopup">
+									<div class="videoBanner__videoImg" style="background-image: url({{ section.video_image | imgix_url: auto: format, q: 50, w: 1200, h: 800 }});">
+										<span class="videoBanner__play"></span>
+									</div>
+								</a>
+							</div>
 						</div>
-					</div>
 
+					</div>
 				</div>
 			</div>
-		</div>
 
-		<div class="popup" data-popup="videoPopup">
-			<div class="popup__overlay">
-				<a href="#" class="popup__close"></a>
-				<div class="popup__scroll">
-					<div class="popup__outer">
-						<div class="popup__box">
-							<div class="popup__inner">
-								<div class="videoBanner__popup">
-									<div class="videoBanner__videoBox">
-										{% if section.is_youtube_active %}
+			<div class="popup" data-popup="videoPopup">
+				<div class="popup__overlay">
+					<a href="#" class="popup__close"></a>
+					<div class="popup__scroll">
+						<div class="popup__outer">
+							<div class="popup__box">
+								<div class="popup__inner">
+									<div class="videoBanner__popup">
+										<div class="videoBanner__videoBox">
+											{% if section.is_youtube_active %}
 
-											<div class="videoBanner__video" data-src="{% value section.yt_video_id %}"></div>
+												<div class="videoBanner__video" data-src="{% value section.yt_video_id %}"></div>
 
-										{% else %}
+											{% else %}
 
-											<video class="videoBanner__video" preload="none">
-												<source src="{% value section.video_asset %}" type="video/mp4">
-											</video>
+												<video class="videoBanner__video" preload="none">
+													<source src="{% value section.video_asset %}" type="video/mp4">
+												</video>
 
-										{% endif %}
+											{% endif %}
+										</div>
 									</div>
 								</div>
 							</div>
@@ -80,8 +81,7 @@
 					</div>
 				</div>
 			</div>
-		</div>
-	</section>
+		</section>
 
 	{% endif %}
 {% endfor %}
