--- a/_layouts/events-archive.html
+++ b/_layouts/events-archive.html
@@ -16,9 +16,11 @@ layout: event-archive
 			<div class="stdCols__body">
 				<div class="events__items jsShowDelayed">
 					{% for event in paginator.posts %}
+						{% if news.published != false %}
 
-						{% include components/events-item.html %}
+							{% include components/events-item.html %}
 
+						{% endif %}
 					{% endfor %}
 				</div>
 			</div>
