--- a/scss/components/_zendesk.scss
+++ b/scss/components/_zendesk.scss
@@ -51,7 +51,7 @@
 
 body > iframe,
 .zEWidget-launcher {
-	display: none !important;
+	// display: none !important;
 }
 
 body > #siteleaf__toolbar {
