--- a/scss/components/_zendesk.scss
+++ b/scss/components/_zendesk.scss
@@ -11,6 +11,7 @@
 	cursor: pointer;
 	transition: background 0.3s, opacity 0.3s, visibility 0.3s;
 	overflow: hidden;
+	user-select: none;
 
 	&:hover {
 		background-color: $c-mainLight;
