--- a/_layouts/work-single.html
+++ b/_layouts/work-single.html
@@ -14,7 +14,7 @@ layout: work-single
 	<div class="contentPage">
 		<div class="wrapper wrapper--inside">
 			<div class="closeButton">
-				<a href="#">Back to open positions</a>
+				<a href="{% t lang_slug %}/career">Back to open positions</a>
 			</div>
 			<div class="stdCols__cols">
 				<div class="stdCols__col stdCols__col--big">
