--- a/_layouts/work-single.html
+++ b/_layouts/work-single.html
@@ -43,7 +43,9 @@ layout: work-single
 		</div>
 	</div>
 
-	{% include sections/events-and-news.html %}
+	{% include sections/banner.html %}
+
+	{% include sections/partners.html %}
 
 {% include footer.html %}
 
