--- a/_includes/sections/work-offers.html
+++ b/_includes/sections/work-offers.html
@@ -1,7 +1,7 @@
 {% for section in site.work-offers-section %}
 	{% if section.title contains page.20_work_offers_section %}
 
-		<section class="workGrid workGrid--spaceTop">
+		<section id="offers" class="workGrid workGrid--spaceTop">
 			<div class="wrapper wrapper--inside">
 
 				{% include settings/filters.html %}
