--- a/scss/components/_offerBox.scss
+++ b/scss/components/_offerBox.scss
@@ -1,9 +1,13 @@
 .offerBox {
-	margin-top: 12px;
 	position: relative;
 	border-radius: 8px;
 	overflow: hidden;
 	z-index: 10;
+
+	&.sticky {
+		position: fixed;
+		top: 100px;
+	}
 
 	&__map {
 		width: 100%;
