--- a/scss/components/_homeBanner.scss
+++ b/scss/components/_homeBanner.scss
@@ -38,6 +38,7 @@
 		left: 0;
 		width: 100%;
 		height: 100vh;
+		max-height: 800px;
 		background-position: center;
 		background-size: cover;
 		background-repeat: no-repeat;
