--- a/scss/helpers/_colors.scss
+++ b/scss/helpers/_colors.scss
@@ -4,8 +4,8 @@ $c-dark: #111;
 $c-main: #8dc63f;
 $c-mainDark: #62ab01;
 $c-mainLight: #9AD945;
-$c-gray: #939393;
-$c-grayDark: #7b7b7b;
-$c-border: #bbbebf;
+$c-gray: #bcbec0;
+$c-grayDark: #939598;
+$c-border: #c5c6c7;
 $c-light: #e6e7e8;
 $c-accent: rgb(117, 189, 15);
