--- a/scss/helpers/_colors.scss
+++ b/scss/helpers/_colors.scss
@@ -7,5 +7,5 @@ $c-mainLight: #9AD945;
 $c-gray: #bcbec0;
 $c-grayDark: #939598;
 $c-border: #c5c6c7;
-$c-light: #e6e7e8;
+$c-light: #f1f1f2;
 $c-accent: rgb(117, 189, 15);
