--- a/_includes/head.html
+++ b/_includes/head.html
@@ -21,17 +21,7 @@
 	{% endif %}
 
 	<link rel="stylesheet" href="/css/main.css" type="text/css" media="all">
-	<link rel="stylesheet" href="/globals/css/styles.css" type="text/css" media="all">
 	<link rel="stylesheet" href="https://cdn.910ths.sa/css/components.min.css" type="text/css" media="all" />
-
-	<style type="text/css">
-		@media (max-width: 768px) {
-
-			.globHeader__nav:before {
-				background-image: url({{ '/globals/images/mobile-nav-bg.jpg' | imgix_url: auto: format, q: 50 }});
-			}
-		}
-	</style>
 
 	{% assign google_analytics_ua = site.google_analytics_ua | strip %}
 	{% if google_analytics_ua != empty %}
@@ -63,150 +53,4 @@
 		{% assign esso_api_base_url = site.esso_api.base_uat_url %}
 	{% endif %}
 
-	<header class="globHeader">
-		<div class="globHeader__inner">
-			<div class="globHeader__container">
-				<div class="globHeader__logo">
-					<a href="{% t lang_slug %}/">{% t logo %}</a>
-				</div>
-				<div class="globHeader__nav globHeaderNav">
-					<ul class="globHeaderNav__items">
-						<li class="globHeaderNav__item globHeaderNav__item--hasSubNav">
-							<a href="#" class="globHeaderNav__link">{% t products.title %}</a>
-							<div class="globHeaderNav__subNav globHeaderSubNav">
-								<div class="globHeader__container">
-									<ul class="globHeaderSubNav__items">
-										<li class="globHeaderSubNav__item">
-											{% capture url %}
-												{% if jekyll.environment == 'production' %}
-													{% t products.p_01.url %}
-												{% else %}
-													{% t products.p_01.uat_url %}
-												{% endif %}
-											{% endcapture %}
-											<a href="{{url}}">{% t products.p_01.title %}</a>
-										</li>
-										<li class="globHeaderSubNav__item">
-											{% capture url %}
-												{% if jekyll.environment == 'production' %}
-													{% t products.p_02.url %}
-												{% else %}
-													{% t products.p_02.uat_url %}
-												{% endif %}
-											{% endcapture %}
-											<a href="{{url}}">{% t products.p_02.title %}</a>
-										</li>
-										<li class="globHeaderSubNav__item">
-											{% capture url %}
-												{% if jekyll.environment == 'production' %}
-													{% t products.p_03.url %}
-												{% else %}
-													{% t products.p_03.uat_url %}
-												{% endif %}
-											{% endcapture %}
-											<a href="{{url}}">{% t products.p_03.title %}</a>
-										</li>
-										<li class="globHeaderSubNav__item">
-											{% capture url %}
-												{% if jekyll.environment == 'production' %}
-													{% t products.p_04.url %}
-												{% else %}
-													{% t products.p_04.uat_url %}
-												{% endif %}
-											{% endcapture %}
-											<a href="{{url}}">{% t products.p_04.title %}</a>
-										</li>
-										<li class="globHeaderSubNav__item">
-											{% capture url %}
-												{% if jekyll.environment == 'production' %}
-													{% t products.p_05.url %}
-												{% else %}
-													{% t products.p_05.uat_url %}
-												{% endif %}
-											{% endcapture %}
-											<a href="{{url}}">{% t products.p_05.title %}</a>
-										</li>
-										<li class="globHeaderSubNav__item">
-											{% capture url %}
-												{% if jekyll.environment == 'production' %}
-													{% t products.p_06.url %}
-												{% else %}
-													{% t products.p_06.uat_url %}
-												{% endif %}
-											{% endcapture %}
-											<a href="{{url}}">{% t products.p_06.title %}</a>
-										</li>
-										<li class="globHeaderSubNav__item">
-											{% capture url %}
-												{% if jekyll.environment == 'production' %}
-													{% t products.p_07.url %}
-												{% else %}
-													{% t products.p_07.uat_url %}
-												{% endif %}
-											{% endcapture %}
-											<a href="{{url}}">{% t products.p_07.title %}</a>
-										</li>
-									</ul>
-								</div>
-							</div>
-						</li>
-						<li class="globHeaderNav__item globShowOnlyLogged">
-							<a href="{{ esso_base_url }}/register" class="globHeaderNav__link">
-								<span class="globHeaderNav__button">{% t api.join %}</span>
-							</a>
-						</li>
-						<li class="globHeaderNav__item globLoginWrap" data-esso-login-url="{{ esso_base_url }}" data-esso-client-id="{{ esso_client_id }}" data-esso-api-url="{{ esso_api_base_url }}">
-							<a href="#" class="globHeaderNav__link globLoginButton">{% t api.login %}</a>
-							<a href="#" class="globHeaderNav__link globAvatar">
-								{% t api.account %} <span></span>
-							</a>
-							<div class="globHeaderNav__subNav globHeaderSubNav globHeaderSubNav--small">
-								<div class="globHeader__container">
-									<ul class="globHeaderSubNav__items">
-										<li class="globHeaderSubNav__item">
-											<a href="{{esso_base_url}}/profile">{% t api.settings %}</a>
-										</li>
-										<li class="globHeaderSubNav__item">
-											<a href="{{esso_base_url}}/logout" class="globLogoutButton">{% t api.logout %}</a>
-										</li>
-									</ul>
-								</div>
-							</div>
-						</li>
-
-						<li class="globHeaderNav__line"></li>
-
-						{% assign nav = site.management | where: 'type', 'nav-mobile-header' %}
-						{% assign nav = nav[0] %}
-
-						{% if nav.published != false %}
-
-							{% for item in nav.items %}
-								<li class="globHeaderNav__item globHeaderNav__item--mobile">
-									<a href="{% path item.url %}" class="globHeaderNav__link" {% target {{ item.is_open_in_new_tab }} %}>
-										{% value item.title %}
-									</a>
-								</li>
-
-							{% endfor %}
-
-						{% endif %}
-
-						<li class="globHeaderNav__item">
-							{% if site.lang == "en" %}
-								<a href="{{ page.url | remove: 'index.html' }}" class="globHeaderNav__link globHeaderNav__link--arabic">عربي</a>
-							{% else %}
-								<a href="/en{{ page.url | remove: 'index.html' }}" class="globHeaderNav__link globHeaderNav__link--english">English</a>
-							{% endif %}
-						</li>
-					</ul>
-				</div>
-				<div class="globHeader__toggle">
-					<span></span>
-					<span></span>
-					<span></span>
-					<span></span>
-				</div>
-			</div>
-		</div>
-	</header>
+	<header class="globHeader"></header>
