--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -44,17 +44,23 @@
 		<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key={{ site. google_maps_js_api }}"></script>
 	{% endif %}
 
-	{% if jekyll.environment == 'production' %}
-		<script src="https://cdn.910ths.sa/js/nine10ths-components.min.js"></script>
-	{% else %}
-		<script src="https://cdn.910ths.sa/js/nine10ths-components.js"></script>
-	{% endif %}
+	<script src="https://cdn.910ths.sa/js/nine10ths-components.min.js"></script>
 
 	<script type="text/javascript">
 		new Core();
 
+		var currentUrl = '{{ page.url | remove: 'index.html' }}';
+
 		const header = new nine10ths.components.Header(document.querySelector('.globHeader'), {
-			lang: '{{ site.lang }}'
+			lang: '{{ site.lang }}',
+			onChangeLanguage: function(callback) {
+
+				if (callback.lang == 'ar')
+					window.location.href = currentUrl;
+				else
+					window.location.href = '/' + callback.lang + currentUrl;
+
+			}
 		});
 
 		const footer = new nine10ths.components.Footer(document.querySelector('.globFooter'), {
