--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -53,7 +53,11 @@
 		<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key={{ site. google_maps_js_api }}"></script>
 	{% endif %}
 
-	<script src="https://cdn.910ths.sa/js/nine10ths-components.min.js"></script>
+	{% if jekyll.environment == 'production' %}
+		<script src="https://cdn.910ths.sa/js/nine10ths-components.min.js"></script>
+	{% else %}
+		<script src="https://cdn.910ths.sa/js/nine10ths-components.js"></script>
+	{% endif %}
 
 	<script type="text/javascript">
 		new Core();
