Add the uat components

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -56,7 +56,7 @@
 	{% if jekyll.environment == 'production' %}
 		<script src="https://cdn.910ths.sa/js/nine10ths-components.min.js"></script>
 	{% else %}
-		<script src="https://cdn.910ths.sa/js/nine10ths-components.js"></script>
+		<script src="https://s3.eu-central-1.amazonaws.com/nine10ths-cdn-uat/js/nine10ths-components.js"></script>
 	{% endif %}
 
 	<script type="text/javascript">
