--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,92 +1,108 @@
-	<footer class="globFooter"></footer>
+	<!-- ▼ Footer ▼ -->
+		<footer class="globFooter"></footer>
+	<!-- ▲ Footer ▲ -->
 
-	{% assign zendesk_subdomain = site.zendesk_subdomain | strip %}
-	{% if zendesk_subdomain != empty %}
+	<!-- ▼ Zendesk ▼ -->
+		{% assign zendesk_subdomain = site.zendesk_subdomain | strip %}
+		{% if zendesk_subdomain != empty %}
 
-		<div class="zendeskButton">
-			<span>
-				<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20">
-					<path d="M11,12.3V13c0,0-1.8,0-2,0v-0.6c0-0.6,0.1-1.4,0.8-2.1c0.7-0.7,1.6-1.2,1.6-2.1c0-0.9-0.7-1.4-1.4-1.4 c-1.3,0-1.4,1.4-1.5,1.7H6.6C6.6,7.1,7.2,5,10,5c2.4,0,3.4,1.6,3.4,3C13.4,10.4,11,10.8,11,12.3z"></path>
-					<circle cx="10" cy="15" r="1"></circle>
-					<path d="M10,2c4.4,0,8,3.6,8,8s-3.6,8-8,8s-8-3.6-8-8S5.6,2,10,2 M10,0C4.5,0,0,4.5,0,10s4.5,10,10,10s10-4.5,10-10S15.5,0,10,0 L10,0z"></path>
-				</svg>
-			</span>
-			<span class="zendeskButton__label" data-waiting="{% t zendesk.waiting %}">{% t zendesk.label %}</span>
-		</div>
+			<div class="zendeskButton">
+				<span>
+					<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20">
+						<path d="M11,12.3V13c0,0-1.8,0-2,0v-0.6c0-0.6,0.1-1.4,0.8-2.1c0.7-0.7,1.6-1.2,1.6-2.1c0-0.9-0.7-1.4-1.4-1.4 c-1.3,0-1.4,1.4-1.5,1.7H6.6C6.6,7.1,7.2,5,10,5c2.4,0,3.4,1.6,3.4,3C13.4,10.4,11,10.8,11,12.3z"></path>
+						<circle cx="10" cy="15" r="1"></circle>
+						<path d="M10,2c4.4,0,8,3.6,8,8s-3.6,8-8,8s-8-3.6-8-8S5.6,2,10,2 M10,0C4.5,0,0,4.5,0,10s4.5,10,10,10s10-4.5,10-10S15.5,0,10,0 L10,0z"></path>
+					</svg>
+				</span>
+				<span class="zendeskButton__label" data-waiting="{% t zendesk.waiting %}">{% t zendesk.label %}</span>
+			</div>
 
-		<script>
-			document.zendeskHost = '{{ zendesk_subdomain }}.zendesk.com';
-			document.zendeskLang = '{{ site.lang }}';
+			<script>
+				document.zendeskHost = '{{ zendesk_subdomain }}.zendesk.com';
+				document.zendeskLang = '{{ site.lang }}';
+			</script>
+
+		{% endif %}
+	<!-- ▲ Zendesk ▲ -->
+
+	<!-- ▼ Global components ▼ -->
+		{% if jekyll.environment == 'production' %}
+			{% assign esso_base_url     = site.esso.base_url %}
+			{% assign esso_client_id    = site.esso.client_id %}
+			{% assign esso_api_base_url = site.esso_api.base_url %}
+		{% else %}
+			{% assign esso_base_url     = site.esso.base_uat_url %}
+			{% assign esso_client_id    = site.esso.client_uat_id %}
+			{% assign esso_api_base_url = site.esso_api.base_uat_url %}
+		{% endif %}
+
+		{% if jekyll.environment == 'production' %}
+			<script src="https://cdn.910ths.sa/js/nine10ths-components.min.js"></script>
+		{% else %}
+			<script src="https://s3.eu-central-1.amazonaws.com/nine10ths-cdn-uat/js/nine10ths-components.js"></script>
+		{% endif %}
+
+		<script type="text/javascript">
+			var currentUrl = '{{ page.url | remove: 'index.html' }}';
+
+			const header = new nine10ths.components.Header(document.querySelector('.globHeader'), {
+				lang: '{{ site.lang }}',
+				env: '{% if jekyll.environment == 'production' %}prod{% else %}uat{% endif %}',
+				onChangeLanguage: function(callback) {
+
+					if (callback.lang == 'ar')
+						window.location.href = currentUrl;
+
+					if (callback.lang == 'en')
+						window.location.href = '/' + callback.lang + currentUrl;
+
+				},
+				onClickLogin: function(event, loginURL){
+					window.location = '{{ esso_base_url }}' + "/login-from-service?client_id=" + '{{ esso_client_id }}' + "&redirect_uri=" + window.location.href;
+				}
+			});
+
+			const globalLogin = new GlobalLogin('{{ esso_api_base_url }}', '{{ esso_client_id }}', function(userData) {
+				header.update({loggedInUserInfo: userData});
+			});
+
+			const footer = new nine10ths.components.Footer(document.querySelector('.globFooter'), {
+				lang: '{{ site.lang }}',
+				env: '{% if jekyll.environment == 'production' %}prod{% else %}uat{% endif %}'
+			});
 		</script>
+	<!-- ▲ Global components ▲ -->
 
-	{% endif %}
-
-	{% assign hotjar_id              = site.hotjar_id | strip %}
-	{% assign hotjar_snippet_version = site.hotjar_snippet_version | strip %}
-	{% if hotjar_id != empty and hotjar_snippet_version != empty %}
-
-		<script>
-			(function(h,o,t,j,a,r){
-				h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
-				h._hjSettings={hjid:{{ hotjar_id }},hjsv:{{ hotjar_snippet_version }}};
-				a=o.getElementsByTagName('head')[0];
-				r=o.createElement('script');r.async=1;
-				r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
-				a.appendChild(r);
-			})(window,document,'//static.hotjar.com/c/hotjar-','.js?sv=');
+	<!-- ▼ JavaScript ▼ -->
+		<script type="text/javascript" src="/js/main.js"></script>
+		<script type="text/javascript">
+			new Core();
 		</script>
+	<!-- ▲ JavaScript ▲ -->
 
-	{% endif %}
+	<!-- ▼ Hotjar ▼ -->
+		{% assign hotjar_id              = site.hotjar_id | strip %}
+		{% assign hotjar_snippet_version = site.hotjar_snippet_version | strip %}
+		{% if hotjar_id != empty and hotjar_snippet_version != empty %}
 
-	{% if jekyll.environment == 'production' %}
-		{% assign esso_client_id    = site.esso.client_id %}
-		{% assign esso_api_base_url = site.esso_api.base_url %}
-	{% else %}
-		{% assign esso_client_id    = site.esso.client_uat_id %}
-		{% assign esso_api_base_url = site.esso_api.base_uat_url %}
-	{% endif %}
+			<script>
+				(function(h,o,t,j,a,r){
+					h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+					h._hjSettings={hjid:{{ hotjar_id }},hjsv:{{ hotjar_snippet_version }}};
+					a=o.getElementsByTagName('head')[0];
+					r=o.createElement('script');r.async=1;
+					r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+					a.appendChild(r);
+				})(window,document,'//static.hotjar.com/c/hotjar-','.js?sv=');
+			</script>
 
-	<script type="text/javascript" src="/js/main.js"></script>
-	<script type="text/javascript" src="{{ site.url }}/globals/js/scripts.js"></script>
+		{% endif %}
+	<!-- ▲ Hotjar ▲ -->
 
-	{% if page.layout == 'events-single' or page.layout == 'work-single' %}
-		<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key={{ site. google_maps_js_api }}"></script>
-	{% endif %}
-
-	{% if jekyll.environment == 'production' %}
-		<script src="https://cdn.910ths.sa/js/nine10ths-components.min.js"></script>
-	{% else %}
-		<script src="https://s3.eu-central-1.amazonaws.com/nine10ths-cdn-uat/js/nine10ths-components.js"></script>
-	{% endif %}
-
-	<script type="text/javascript">
-		new Core();
-
-		var currentUrl = '{{ page.url | remove: 'index.html' }}';
-
-		const header = new nine10ths.components.Header(document.querySelector('.globHeader'), {
-			lang: '{{ site.lang }}',
-			env: '{% if jekyll.environment == 'production' %}prod{% else %}uat{% endif %}',
-			onChangeLanguage: function(callback) {
-
-				if (callback.lang == 'ar')
-					window.location.href = currentUrl;
-
-				if (callback.lang == 'en')
-					window.location.href = '/' + callback.lang + currentUrl;
-
-			}
-		});
-
-		const globalLogin = new GlobalLogin('{{esso_api_base_url}}', '{{esso_client_id}}', function(userData) {
-			header.update({loggedInUserInfo: userData});
-		});
-
-		const footer = new nine10ths.components.Footer(document.querySelector('.globFooter'), {
-			lang: '{{ site.lang }}',
-			env: '{% if jekyll.environment == 'production' %}prod{% else %}uat{% endif %}'
-		});
-	</script>
-
+	<!-- ▼ Google Maps API ▼ -->
+		{% if page.layout == 'events-single' or page.layout == 'work-single' %}
+			<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key={{ site.google_maps_js_api }}"></script>
+		{% endif %}
+	<!-- ▲ Google Maps API ▲ -->
 </body>
 </html>
