--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,69 +13,78 @@
 	<meta name="robots" content="index,follow">
 	<link rel="icon" type="image/png" href="/img/favicon.png">
 
-	<link rel="stylesheet" href="/css/main.css" type="text/css" media="all">
+	<!-- ▼ CSS ▼ -->
+		{% if site.lang == 'en' %} {% include fonts/ltr.html %} {% else %} {% include fonts/rtl.html %} {% endif %}
+		<link rel="stylesheet" href="/css/main.css" type="text/css" media="all">
+		<!--[if IE]>
+			<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+			<script type="text/javascript" src="/js/html5.js"></script>
+		<![endif]-->
+	<!-- ▲ CSS ▲ -->
 
-	<!--[if IE]>
-		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-		<script type="text/javascript" src="/js/html5.js"></script>
-	<![endif]-->
 
-	{% if jekyll.environment == 'production' %}
-		<link href="https://cdn.910ths.sa/css/bundle.min.css" rel="stylesheet" />
-	{% else %}
-		<link href="https://s3.eu-central-1.amazonaws.com/nine10ths-cdn-uat/css/bundle.css" rel="stylesheet" />
-	{% endif %}
+	<!-- ▼ Global components ▼ -->
+		{% if jekyll.environment == 'production' %}
+			<link href="https://cdn.910ths.sa/css/bundle.min.css" rel="stylesheet" />
+		{% else %}
+			<link href="https://s3.eu-central-1.amazonaws.com/nine10ths-cdn-uat/css/bundle.css" rel="stylesheet" />
+		{% endif %}
+	<!-- ▲ Global components ▲ -->
 
-	{% if site.lang == 'en' %} {% include fonts/ltr.html %} {% else %} {% include fonts/rtl.html %} {% endif %}
+	<!-- ▼ Google Analytics ▼ -->
+		{% assign google_analytics_ua = site.google_analytics_ua | strip %}
+		{% if google_analytics_ua != empty %}
+		<script>
+			(function(i, s, o, g, r, a, m) {
+				i['GoogleAnalyticsObject'] = r;
+				i[r] = i[r] || function() {
+					(i[r].q = i[r].q || []).push(arguments)
+				}, i[r].l = 1 * new Date();
+				a = s.createElement(o),
+					m = s.getElementsByTagName(o)[0];
+				a.async = 1;
+				a.src = g;
+				m.parentNode.insertBefore(a, m)
+			})(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
-	{% assign google_analytics_ua = site.google_analytics_ua | strip %}
-	{% if google_analytics_ua != empty %}
-	<script>
-		(function(i, s, o, g, r, a, m) {
-			i['GoogleAnalyticsObject'] = r;
-			i[r] = i[r] || function() {
-				(i[r].q = i[r].q || []).push(arguments)
-			}, i[r].l = 1 * new Date();
-			a = s.createElement(o),
-				m = s.getElementsByTagName(o)[0];
-			a.async = 1;
-			a.src = g;
-			m.parentNode.insertBefore(a, m)
-		})(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+			ga('create', '{{ google_analytics_ua }}', 'auto');
+			ga('send', 'pageview');
+		</script>
+		{% endif %}
+	<!-- ▲ Google Analytics ▲ -->
 
-		ga('create', '{{ google_analytics_ua }}', 'auto');
-		ga('send', 'pageview');
-	</script>
-	{% endif %}
-
-	{% if jekyll.environment == 'production' %}
-	<!-- Google Tag Manager -->
-	<script>
-		(function(w, d, s, l, i) {
-			w[l] = w[l] || [];
-			w[l].push({
-				'gtm.start': new Date().getTime(),
-				event: 'gtm.js'
-			});
-			var f = d.getElementsByTagName(s)[0],
-				j = d.createElement(s),
-				dl = l != 'dataLayer' ? '&l=' + l : '';
-			j.async = true;
-			j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
-			f.parentNode.insertBefore(j, f);
-		})(window, document, 'script', 'dataLayer', '{{ google_tag_manager_gtm }}');
-	</script>
-	<!-- End Google Tag Manager -->
-	{% endif %}
+	<!-- ▼ Google Tag Manager ▼ -->
+		{% assign google_tag_manager_gtm = site.google_tag_manager_gtm | strip %}
+		{% if jekyll.environment == 'production' and google_tag_manager_gtm != empty %}
+			<script>
+				(function(w, d, s, l, i) {
+					w[l] = w[l] || [];
+					w[l].push({
+						'gtm.start': new Date().getTime(),
+						event: 'gtm.js'
+					});
+					var f = d.getElementsByTagName(s)[0],
+						j = d.createElement(s),
+						dl = l != 'dataLayer' ? '&l=' + l : '';
+					j.async = true;
+					j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
+					f.parentNode.insertBefore(j, f);
+				})(window, document, 'script', 'dataLayer', '{{ google_tag_manager_gtm }}');
+			</script>
+		{% endif %}
+	<!-- ▲ Google Tag Manager ▲ -->
 </head>
 
 <body class="{{ page.layout }}" dir="{% t direction %}">
-	{% if jekyll.environment == 'production' %}
-		<!-- Google Tag Manager (noscript) -->
+	<!-- ▼ Google Tag Manager ▼ -->
+		{% assign google_tag_manager_gtm = site.google_tag_manager_gtm | strip %}
+		{% if jekyll.environment == 'production' and google_tag_manager_gtm != empty %}
 			<noscript>
 				<iframe src="https://www.googletagmanager.com/ns.html?id={{ google_tag_manager_gtm }}" height="0" width="0" style="display:none;visibility:hidden"></iframe>
 			</noscript>
-		<!-- End Google Tag Manager (noscript) -->
-	{% endif %}
+		{% endif %}
+	<!-- ▲ Google Tag Manager ▲ -->
 
-	<header class="globHeader"></header>
+	<!-- ▼ Header ▼ -->
+		<header class="globHeader"></header>
+	<!-- ▲ Header ▲ -->
