Update header & footer

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -28,4 +28,4 @@ layout: index
 {% include footer.html %}
 
 <!-- END HTML -->
-{% endcapture %}{{ html_content }}
+{% endcapture %}{{ html_content | minify }}
