Update header & footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -26,6 +26,8 @@
 	<!-- ▲ Zendesk ▲ -->
 
 	<!-- ▼ Global components ▼ -->
+		<script type="text/javascript" src="/globals/js/scripts.js"></script>
+
 		{% if jekyll.environment == 'production' %}
 			{% assign esso_base_url     = site.esso.base_url %}
 			{% assign esso_client_id    = site.esso.client_id %}
